--- a/Modacity/Modacity/ViewController/Details/details.storyboard
+++ b/Modacity/Modacity/ViewController/Details/details.storyboard
@@ -453,6 +453,53 @@
                                                     <constraint firstItem="y4t-gg-gsi" firstAttribute="centerY" secondItem="J0v-97-ozb" secondAttribute="centerY" id="tEX-GS-Cgd"/>
                                                 </constraints>
                                             </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLAYLIST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXJ-sp-tTa">
+                                                <rect key="frame" x="36" y="254" width="35" height="10"/>
+                                                <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="8"/>
+                                                <color key="textColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I9t-rz-nJ7">
+                                                <rect key="frame" x="36" y="269" width="303" height="48"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdp-3l-Q4y">
+                                                        <rect key="frame" x="10" y="17" width="32.5" height="14.5"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
+                                                        <color key="textColor" red="0.7843137255" green="0.78823529410000004" blue="0.80392156859999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optional" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y9Y-vz-zTA">
+                                                        <rect key="frame" x="247.5" y="18" width="32.5" height="11"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Italic" family="Lato" pointSize="9"/>
+                                                        <color key="textColor" red="0.7843137255" green="0.78823529410000004" blue="0.80392156859999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_arrow_left_gray" translatesAutoresizingMaskIntoConstraints="NO" id="wdA-MU-qo7">
+                                                        <rect key="frame" x="285" y="18" width="8" height="12"/>
+                                                        <color key="tintColor" red="0.058823529409999999" green="0.87843137250000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </imageView>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wsP-vM-K5n">
+                                                        <rect key="frame" x="0.0" y="0.0" width="303" height="48"/>
+                                                        <connections>
+                                                            <action selector="onPlaylist:" destination="l7a-BO-1br" eventType="touchUpInside" id="2jk-sB-9zH"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="wdA-MU-qo7" firstAttribute="leading" secondItem="y9Y-vz-zTA" secondAttribute="trailing" constant="5" id="50R-9p-rcr"/>
+                                                    <constraint firstAttribute="bottom" secondItem="wsP-vM-K5n" secondAttribute="bottom" id="K5z-zi-s8C"/>
+                                                    <constraint firstItem="gdp-3l-Q4y" firstAttribute="centerY" secondItem="I9t-rz-nJ7" secondAttribute="centerY" id="KZe-Yu-bdj"/>
+                                                    <constraint firstAttribute="trailing" secondItem="wdA-MU-qo7" secondAttribute="trailing" constant="10" id="TWA-ZL-2wY"/>
+                                                    <constraint firstItem="gdp-3l-Q4y" firstAttribute="leading" secondItem="I9t-rz-nJ7" secondAttribute="leading" constant="10" id="TWm-0D-wPw"/>
+                                                    <constraint firstItem="wsP-vM-K5n" firstAttribute="leading" secondItem="I9t-rz-nJ7" secondAttribute="leading" id="TlF-Wu-I7B"/>
+                                                    <constraint firstItem="y9Y-vz-zTA" firstAttribute="centerY" secondItem="I9t-rz-nJ7" secondAttribute="centerY" id="lAl-ls-UBz"/>
+                                                    <constraint firstItem="wsP-vM-K5n" firstAttribute="top" secondItem="I9t-rz-nJ7" secondAttribute="top" id="psc-K3-52r"/>
+                                                    <constraint firstItem="wdA-MU-qo7" firstAttribute="centerY" secondItem="I9t-rz-nJ7" secondAttribute="centerY" id="rtL-af-hZY"/>
+                                                    <constraint firstAttribute="height" constant="48" id="scI-s9-iMf"/>
+                                                    <constraint firstAttribute="trailing" secondItem="wsP-vM-K5n" secondAttribute="trailing" id="was-Fr-Cd6"/>
+                                                </constraints>
+                                            </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ah8-E6-GGh">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="581"/>
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
@@ -463,6 +510,8 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="ZXJ-sp-tTa" firstAttribute="top" secondItem="J0v-97-ozb" secondAttribute="bottom" constant="15" id="0mX-Nv-5CC"/>
+                                            <constraint firstItem="I9t-rz-nJ7" firstAttribute="top" secondItem="ZXJ-sp-tTa" secondAttribute="bottom" constant="5" id="2l7-dT-nqn"/>
                                             <constraint firstItem="pbA-dj-7ey" firstAttribute="top" secondItem="l3B-yC-32a" secondAttribute="bottom" constant="15" id="3E3-z3-Lfv"/>
                                             <constraint firstItem="eZY-oK-7Il" firstAttribute="top" secondItem="zKu-bG-2Sb" secondAttribute="top" constant="20" id="3Qq-ow-o65"/>
                                             <constraint firstItem="l3B-yC-32a" firstAttribute="leading" secondItem="8XT-Ca-0bo" secondAttribute="leading" id="4Qm-DJ-BCE"/>
@@ -471,16 +520,20 @@
                                             <constraint firstItem="8XT-Ca-0bo" firstAttribute="top" secondItem="T70-59-jsS" secondAttribute="bottom" constant="15" id="8Jd-2c-aXD"/>
                                             <constraint firstItem="pbA-dj-7ey" firstAttribute="leading" secondItem="eZY-oK-7Il" secondAttribute="leading" id="AIv-MU-I18"/>
                                             <constraint firstItem="Ah8-E6-GGh" firstAttribute="leading" secondItem="zKu-bG-2Sb" secondAttribute="leading" id="AbE-XX-YA8"/>
+                                            <constraint firstItem="I9t-rz-nJ7" firstAttribute="leading" secondItem="ZXJ-sp-tTa" secondAttribute="leading" id="Cbb-QN-oj6"/>
                                             <constraint firstItem="8XT-Ca-0bo" firstAttribute="leading" secondItem="T70-59-jsS" secondAttribute="leading" id="Hgr-fy-R7k"/>
                                             <constraint firstAttribute="bottom" secondItem="Ah8-E6-GGh" secondAttribute="bottom" id="Kjl-HR-EIy"/>
                                             <constraint firstItem="J0v-97-ozb" firstAttribute="leading" secondItem="T70-59-jsS" secondAttribute="leading" id="NeC-ad-TAX"/>
                                             <constraint firstAttribute="trailing" secondItem="Ah8-E6-GGh" secondAttribute="trailing" id="Oql-CG-59r"/>
+                                            <constraint firstItem="I9t-rz-nJ7" firstAttribute="trailing" secondItem="T70-59-jsS" secondAttribute="trailing" id="Ur5-Pa-0mc"/>
+                                            <constraint firstItem="I9t-rz-nJ7" firstAttribute="leading" secondItem="T70-59-jsS" secondAttribute="leading" id="YCc-Ce-5rQ"/>
                                             <constraint firstItem="J0v-97-ozb" firstAttribute="top" secondItem="pbA-dj-7ey" secondAttribute="bottom" constant="5" id="acV-zn-FPQ"/>
                                             <constraint firstItem="T70-59-jsS" firstAttribute="leading" secondItem="eZY-oK-7Il" secondAttribute="leading" id="dL3-bF-QFm"/>
                                             <constraint firstAttribute="trailing" secondItem="T70-59-jsS" secondAttribute="trailing" constant="36" id="dmE-Zg-1z2"/>
                                             <constraint firstItem="J0v-97-ozb" firstAttribute="trailing" secondItem="T70-59-jsS" secondAttribute="trailing" id="lZC-Xm-IWo"/>
                                             <constraint firstItem="l3B-yC-32a" firstAttribute="trailing" secondItem="T70-59-jsS" secondAttribute="trailing" id="luD-uO-khZ"/>
                                             <constraint firstItem="T70-59-jsS" firstAttribute="top" secondItem="eZY-oK-7Il" secondAttribute="bottom" constant="5" id="m7n-pQ-qrK"/>
+                                            <constraint firstItem="ZXJ-sp-tTa" firstAttribute="leading" secondItem="pbA-dj-7ey" secondAttribute="leading" id="q6c-bX-sTz"/>
                                             <constraint firstItem="l3B-yC-32a" firstAttribute="top" secondItem="8XT-Ca-0bo" secondAttribute="bottom" constant="5" id="qZq-vc-fT0"/>
                                             <constraint firstItem="Ah8-E6-GGh" firstAttribute="top" secondItem="zKu-bG-2Sb" secondAttribute="top" id="rI7-8E-BDw"/>
                                             <constraint firstItem="eZY-oK-7Il" firstAttribute="leading" secondItem="zKu-bG-2Sb" secondAttribute="leading" constant="36" id="wLI-Ud-X8X"/>
@@ -564,6 +617,8 @@
                         <outlet property="constraintForHeaderViewHeight" destination="t6o-MG-4dj" id="Iwg-ZV-4N5"/>
                         <outlet property="labelItemName" destination="y4t-gg-gsi" id="dZC-Jl-sDt"/>
                         <outlet property="labelItemNameCaption" destination="pbA-dj-7ey" id="dRd-TF-ZzK"/>
+                        <outlet property="labelPlaylist" destination="gdp-3l-Q4y" id="vUh-8L-Dm5"/>
+                        <outlet property="labelPlaylistCaption" destination="ZXJ-sp-tTa" id="ZOg-7h-Ngq"/>
                         <outlet property="labelTitle" destination="hAz-eI-ef2" id="WWr-HH-t3T"/>
                         <outlet property="labelTotalDate" destination="Rfa-rE-d20" id="GQN-nR-DjI"/>
                         <outlet property="labelTotalTime" destination="VQB-zG-3Sb" id="TNB-HX-Gzp"/>
@@ -571,6 +626,7 @@
                         <outlet property="viewContainer" destination="zKu-bG-2Sb" id="v48-rR-xvo"/>
                         <outlet property="viewFirstPanel" destination="T70-59-jsS" id="6i1-B4-E3n"/>
                         <outlet property="viewItemNamePanel" destination="J0v-97-ozb" id="eFD-rE-Qeb"/>
+                        <outlet property="viewPlaylistPanel" destination="I9t-rz-nJ7" id="uxf-ln-kh3"/>
                         <outlet property="viewSecondPanel" destination="l3B-yC-32a" id="cZG-JY-SIW"/>
                     </connections>
                 </viewController>
