--- a/Modacity/Modacity/ViewController/Details/PlaylistHistoryView.xib
+++ b/Modacity/Modacity/ViewController/Details/PlaylistHistoryView.xib
@@ -34,7 +34,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQt-bJ-afO">
                     <rect key="frame" x="0.0" y="0.0" width="419" height="40"/>
                     <subviews>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MHc-OW-AL4">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MHc-OW-AL4">
                             <rect key="frame" x="20" y="0.0" width="50" height="40"/>
                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                             <state key="normal" image="btn_edit">
