Manual practice editing completed, Improvement duplication issue fixed, duplicated practice entry bug fixed.

--- a/Modacity/Modacity/ViewController/Details/details.storyboard
+++ b/Modacity/Modacity/ViewController/Details/details.storyboard
@@ -614,6 +614,8 @@
                     <connections>
                         <outlet property="buttonAddEntry" destination="J95-jz-FPm" id="zyM-nS-Ay4"/>
                         <outlet property="buttonCover" destination="Ah8-E6-GGh" id="Bix-W9-pxE"/>
+                        <outlet property="buttonItemSelect" destination="Oay-Gk-el4" id="ONc-dm-GN9"/>
+                        <outlet property="buttonPlaylistSelect" destination="wsP-vM-K5n" id="r3W-hA-wmv"/>
                         <outlet property="constraintForHeaderViewHeight" destination="t6o-MG-4dj" id="Iwg-ZV-4N5"/>
                         <outlet property="labelItemName" destination="y4t-gg-gsi" id="dZC-Jl-sDt"/>
                         <outlet property="labelItemNameCaption" destination="pbA-dj-7ey" id="dRd-TF-ZzK"/>
