Fixed keyword remove button bug in practice item list screen.

--- a/Modacity/Modacity/ViewController/PracticeItem/practice_item.storyboard
+++ b/Modacity/Modacity/ViewController/PracticeItem/practice_item.storyboard
@@ -61,7 +61,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oxp-2W-0fP">
-                                                    <rect key="frame" x="52.5" y="14" width="273.5" height="36.5"/>
+                                                    <rect key="frame" x="52.5" y="13.5" width="273.5" height="36.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Practice Item" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="lCi-yX-bpm">
                                                             <rect key="frame" x="0.0" y="0.0" width="273.5" height="19.5"/>
@@ -70,7 +70,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Test" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fyv-jT-Zfq">
-                                                            <rect key="frame" x="0.0" y="-8" width="273.5" height="36.5"/>
+                                                            <rect key="frame" x="0.0" y="-8.5" width="273.5" height="36.5"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <constraints>
@@ -250,7 +250,7 @@
                                         <rect key="frame" x="10" y="7" width="36" height="36"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Practice Item Name Only&quot;" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Myq-0p-5Gd">
-                                        <rect key="frame" x="56" y="17" width="269" height="16"/>
+                                        <rect key="frame" x="56" y="17.5" width="269" height="16"/>
                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -883,7 +883,7 @@ Working On?</string>
                                                             <rect key="frame" x="10" y="4" width="36" height="36"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Practice Item Name Only&quot;" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TvE-HE-kPK">
-                                                            <rect key="frame" x="56" y="14.5" width="269" height="16"/>
+                                                            <rect key="frame" x="56" y="14" width="269" height="16"/>
                                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
@@ -942,7 +942,7 @@ Working On?</string>
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f9J-PF-irF">
-                                                    <rect key="frame" x="55" y="14" width="272" height="36.5"/>
+                                                    <rect key="frame" x="55" y="13.5" width="272" height="36.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Practice Item" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ydv-5K-KIc">
                                                             <rect key="frame" x="0.0" y="0.0" width="272" height="19.5"/>
@@ -1077,7 +1077,7 @@ Working On?</string>
                                         </constraints>
                                         <state key="normal" image="icon_remove_white"/>
                                         <connections>
-                                            <action selector="onRemoveKeyword:" destination="ZH6-O4-ov3" eventType="touchUpInside" id="URc-JV-9bb"/>
+                                            <action selector="onRemoveKeyword:" destination="Nt4-pi-OvH" eventType="touchUpInside" id="YhG-Tv-QQg"/>
                                         </connections>
                                     </button>
                                 </subviews>
