Created UI NumberPad class with Done button

--- a/Modacity/Modacity/ViewController/Settings/settings.storyboard
+++ b/Modacity/Modacity/ViewController/Settings/settings.storyboard
@@ -338,7 +338,7 @@
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="440.25" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aw5-gP-bed">
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="440.25" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aw5-gP-bed" customClass="UINumberPadWithDoneCancel" customModule="Modacity" customModuleProvider="target">
                                                     <rect key="frame" x="263" y="12.333333333333336" width="80" height="30"/>
                                                     <color key="backgroundColor" red="0.21568627450980393" green="0.22352941176470587" blue="0.28235294117647058" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
@@ -690,7 +690,7 @@ take a break during my
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vKV-RE-8lb">
                                                         <rect key="frame" x="58.999999999999986" y="100.33333333333331" width="155.66666666666663" height="37"/>
                                                         <subviews>
-                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="10" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gxM-H2-tHZ">
+                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="10" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gxM-H2-tHZ" customClass="UINumberPadWithDoneCancel" customModule="Modacity" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="0.0" width="35" height="34"/>
                                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
