--- a/Modacity/Modacity/ViewController/Details/details.storyboard
+++ b/Modacity/Modacity/ViewController/Details/details.storyboard
@@ -328,7 +328,7 @@
                                                         <rect key="frame" x="271" y="13" width="22" height="22"/>
                                                         <color key="tintColor" red="0.058823529409999999" green="0.87843137250000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     </imageView>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rlL-5r-PZo">
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rlL-5r-PZo" customClass="UINumberPadWithDoneCancel" customModule="Modacity" customModuleProvider="target">
                                                         <rect key="frame" x="151.5" y="9" width="0.0" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" id="eK1-DR-eaz"/>
