Manual practice editings UX processed.

--- a/Modacity/Modacity/View/DatePickerPopupView.xib
+++ b/Modacity/Modacity/View/DatePickerPopupView.xib
@@ -18,6 +18,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DatePickerPopupView" customModule="Modacity" customModuleProvider="target">
             <connections>
+                <outlet property="constraintForDateInputPickerHeight" destination="hSc-pU-IuY" id="481-Hh-lMG"/>
                 <outlet property="datePicker" destination="gwp-v0-Jz3" id="CqF-O4-qIv"/>
                 <outlet property="viewContent" destination="LvZ-Ql-04F" id="Chb-PO-iDg"/>
             </connections>
