--- a/Modacity/Modacity/ViewController/Details/PlaylistHistoryCell.xib
+++ b/Modacity/Modacity/ViewController/Details/PlaylistHistoryCell.xib
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MpL-fs-sDY">
-                        <rect key="frame" x="16" y="5" width="289" height="262"/>
+                        <rect key="frame" x="16" y="0.0" width="289" height="262"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vbN-Mt-dHL">
                                 <rect key="frame" x="15" y="5" width="259" height="36"/>
@@ -89,7 +89,7 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="MpL-fs-sDY" secondAttribute="trailing" constant="15" id="169-vV-JZy"/>
                     <constraint firstItem="MpL-fs-sDY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="360-jC-Knh"/>
-                    <constraint firstItem="MpL-fs-sDY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="yDg-qy-Nm7"/>
+                    <constraint firstItem="MpL-fs-sDY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="yDg-qy-Nm7"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
